[package]
edition = "2021"
name = "eh2telegraph"
version = "0.1.0"

[dependencies]
again = { version = "0.1", default_features = false, features = ["rand"] }
anyhow = "1"
bytes = "1"
cloudflare-kv-proxy = "0.2"
derive_more = { version = "0.99", features = ["from_str"] }
futures = "0.3"
hashlink = "0.9"
ipnet = "2"
lazy_static = "1"
once_cell = "1"
parking_lot = { version = "0.12", features = ["hardware-lock-elision"] }
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "multipart",
    "rustls-tls",
] }
rustls = { version = "0.20", features = ["dangerous_configuration"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_yaml = "0.9"
thiserror = "1"
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "net",
    "sync",
    "time",
    "parking_lot",
] }
tracing = "0.1"
webpki = "0.22"
webpki-roots = "0.22"
